platform2.orbit8.com/etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Sun Dec 27 14:45:02 2015
*mangle
:PREROUTING ACCEPT [161037:91192197]
:INPUT ACCEPT [161037:91192197]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [147822:22838910]
:POSTROUTING ACCEPT [147822:22838910]
:nova-api-POSTROUTING - [0:0]
-A POSTROUTING -j nova-api-POSTROUTING
COMMIT
# Completed on Sun Dec 27 14:45:02 2015
# Generated by iptables-save v1.4.21 on Sun Dec 27 14:45:02 2015
*nat
:PREROUTING ACCEPT [198:12091]
:INPUT ACCEPT [198:12091]
:OUTPUT ACCEPT [4062:259314]
:POSTROUTING ACCEPT [4062:259314]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j nova-api-PREROUTING
-A OUTPUT -j nova-api-OUTPUT
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -j nova-postrouting-bottom
-A nova-api-snat -j nova-api-float-snat
-A nova-postrouting-bottom -j nova-api-snat
COMMIT
# Completed on Sun Dec 27 14:45:02 2015
# Generated by iptables-save v1.4.21 on Sun Dec 27 14:45:02 2015
*filter
:INPUT ACCEPT [2:104]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:312]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j nova-api-INPUT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.15" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8777 -m comment --comment "001 ceilometer-api incoming ceilometer_api" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.15" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "001 horizon 443  incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.15" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 27017 -m comment --comment "001 mongodb-server incoming mongodb_server" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 nagios incoming" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5666 -m comment --comment "001 nagios-nrpe incoming nagios_nrpe" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_10.1.10.251" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.10.251_10.1.13.15" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 10.1.10.251" -j ACCEPT
-A FORWARD -j nova-filter-top
-A FORWARD -j nova-api-FORWARD
-A OUTPUT -j nova-filter-top
-A OUTPUT -j nova-api-OUTPUT
-A nova-api-INPUT -d 10.1.10.251/32 -p tcp -m tcp --dport 8775 -j ACCEPT
-A nova-filter-top -j nova-api-local
COMMIT
# Completed on Sun Dec 27 14:45:02 2015
